status message component was created

--- a/app/static/login-page.html
+++ b/app/static/login-page.html
@@ -32,10 +32,24 @@
                 </div>
               </div>
               <div class="form__line">
-                <div class="column-group column-group--md column-group--justify-items-center">
+                <div class="column-group column-group--justify-items-center">
                   <div class="column-group__item">
                     <button class="button button--fluid" type="submit">Sign in
                     </button>
+                  </div>
+                  <div class="column-group__item">
+                    <div class="status-message">
+                      <div class="status-message__icon">
+                        <svg class="svg-icon svg-icon--brick-red" width="24" height="24">
+                          <use href="images/svg/svg-sprite/symbol/sprite.svg#attention" x="0" y="0"></use>
+                        </svg>
+                      </div>
+                      <div class="status-message__info">
+                        <div class="status-message__text">
+                          <p class="p-xl font-semibold text-brick-red">Oops... Incorrect Email or Password.</p>
+                        </div>
+                      </div>
+                    </div>
                   </div>
                   <div class="column-group__item"><a class="p font-semibold text-surfie-green" href="#">Forgot password?</a></div>
                 </div>
@@ -65,7 +79,7 @@
               </button>
             </div>
           </div>
-          <div class="form-box__footer"><a class="p font-semibold text-surfie-green" href="#">Create an account</a></div>
+          <div class="form-box__footer"><a class="p font-semibold text-surfie-green text-underline" href="#">Create an account</a></div>
         </div>
       </div>
     </div>
