--- a/app/static/login-page.html
+++ b/app/static/login-page.html
@@ -41,7 +41,7 @@
                     <div class="status-message">
                       <div class="status-message__icon">
                         <svg class="svg-icon svg-icon--brick-red" width="24" height="24">
-                          <use href="images/svg/svg-sprite/symbol/sprite.svg#attention" x="0" y="0"></use>
+                          <use href="images/svg/svg-sprite/symbol/sprite.svg#warning" x="0" y="0"></use>
                         </svg>
                       </div>
                       <div class="status-message__info">
