link component was created; select js script was refactored; status-message component was refactored;

--- a/app/static/login-page.html
+++ b/app/static/login-page.html
@@ -75,14 +75,12 @@
                             <use href="images/svg/svg-sprite/symbol/sprite.svg#warning" x="0" y="0"></use>
                           </svg>
                         </div>
-                        <div class="status-message__info">
-                          <div class="status-message__text">
-                            <p class="p-xl font-semibold text-brick-red">Oops... Incorrect Email or Password.</p>
-                          </div>
+                        <div class="status-message__info"><span class="status-message__title">Oops... Incorrect Email or Password.</span>
                         </div>
                       </div>
                     </div>
-                    <div class="column-group__item"><a class="p font-semibold text-surfie-green" href="#">Forgot password?</a></div>
+                    <div class="column-group__item"><a class="link link--surfie-green" href="#">Forgot password?</a>
+                    </div>
                   </div>
                 </div>
               </form>
@@ -110,7 +108,8 @@
                 </button>
               </div>
             </div>
-            <div class="form-box__footer"><a class="p font-semibold text-surfie-green text-underline" href="#">Create an account</a></div>
+            <div class="form-box__footer"><a class="link link--surfie-green link--underline" href="#">Create an account</a>
+            </div>
           </div>
         </div>
       </div>
