sizes were decreased

--- a/app/static/login-page.html
+++ b/app/static/login-page.html
@@ -63,7 +63,7 @@
                   </div>
                 </div>
                 <div class="form__line">
-                  <div class="column-group column-group--justify-items-center">
+                  <div class="column-group column-group--md column-group--justify-items-center">
                     <div class="column-group__item">
                       <button class="button button--fluid" type="submit">Sign in
                       </button>
