input animation was fixed

--- a/app/static/login-page.html
+++ b/app/static/login-page.html
@@ -49,16 +49,16 @@
                 <div class="form__line">
                   <div class="form-group">
                     <div class="input js-input-animation">
-                      <label class="input__label js-input-animation-label">Email:</label>
-                      <input class="input__field js-input-animation-field" type="email"/>
+                      <label class="input__label js-input-animation-label" for="email">Email:</label>
+                      <input class="input__field js-input-animation-field" id="email" type="email"/>
                     </div>
                   </div>
                 </div>
                 <div class="form__line">
                   <div class="form-group">
                     <div class="input js-input-animation">
-                      <label class="input__label js-input-animation-label">Password:</label>
-                      <input class="input__field js-input-animation-field" type="password"/>
+                      <label class="input__label js-input-animation-label" for="password">Password:</label>
+                      <input class="input__field js-input-animation-field" id="password" type="password"/>
                     </div>
                   </div>
                 </div>
