--- a/app/static/login-page.html
+++ b/app/static/login-page.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div class="login-page">
-      <div class="container login-page__container">
+      <div class="container">
         <div class="login-page__lang">
           <div class="select js-select select--auto">
             <div class="select__label js-select-label" data-selected="English">
