input font size was decreased

--- a/app/static/login-page.html
+++ b/app/static/login-page.html
@@ -15,20 +15,17 @@
         <div class="login-page__lang">
           <div class="select js-select select--auto">
             <div class="select__label js-select-label" data-selected="English">
-              <div class="select__left"><img class="select__thumbnail" src="images/flags/gb.svg" alt="icon"/>
-                <p>English</p>
+              <div class="select__left"><img class="select__thumbnail" src="images/flags/gb.svg" alt="icon"/><span>English</span>
               </div>
             </div>
             <div class="select__options  js-select-options">
               <div class="custom-scroll select__options-scroll" data-select-simplebar="data-select-simplebar">
                 <div class="select__option  js-select-option" data-option="English">
-                  <div class="select__left"><img class="select__thumbnail" src="images/flags/gb.svg" alt="icon"/>
-                    <p>English</p>
+                  <div class="select__left"><img class="select__thumbnail" src="images/flags/gb.svg" alt="icon"/><span>English</span>
                   </div>
                 </div>
                 <div class="select__option  js-select-option" data-option="Lithuanian">
-                  <div class="select__left"><img class="select__thumbnail" src="images/flags/lt.svg" alt="icon"/>
-                    <p>Lithuanian</p>
+                  <div class="select__left"><img class="select__thumbnail" src="images/flags/lt.svg" alt="icon"/><span>Lithuanian</span>
                   </div>
                 </div>
               </div>
