--- a/app/static/login-page.html
+++ b/app/static/login-page.html
@@ -76,7 +76,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="column-group__item"><a class="link link--surfie-green" href="#">Forgot password?</a>
+                    <div class="column-group__item"><a class="link" href="#">Forgot password?</a>
                     </div>
                   </div>
                 </div>
@@ -105,7 +105,7 @@
                 </button>
               </div>
             </div>
-            <div class="form-box__footer"><a class="link link--surfie-green link--underline" href="#">Create an account</a>
+            <div class="form-box__footer"><a class="link link--underline" href="#">Create an account</a>
             </div>
           </div>
         </div>
