application-page-2 was created

--- a/app/static/application-page-1.html
+++ b/app/static/application-page-1.html
@@ -45,9 +45,9 @@
           </div>
           <div class="application-form__item">
                     <div class="form-steps">
-                      <div class="form-steps__step is-active">1. Services &amp; Prices</div>
-                      <div class="form-steps__step ">2. Education &amp; Legal</div>
-                      <div class="form-steps__step ">3. Contact information</div>
+                      <div class="form-steps__step is-active"><span class="form-steps__title">1. Services &amp; Prices</span></div>
+                      <div class="form-steps__step"><span class="form-steps__title">2. Education &amp; Legal</span></div>
+                      <div class="form-steps__step"><span class="form-steps__title">3. Contact information</span></div>
                     </div>
           </div>
           <div class="application-form__item">
