--- a/app/static/login-page.html
+++ b/app/static/login-page.html
@@ -47,7 +47,7 @@
                   <div class="form-group">
                     <div class="input-animation js-input-animation">
                       <label class="input-animation__label js-input-animation-label" for="email">Email:</label>
-                      <input class="input input--bordered js-input-animation-field" id="email" type="email"/>
+                      <input class="input input--bordered js-input-animation-field" type="email" id="email"/>
                     </div>
                   </div>
                 </div>
@@ -55,7 +55,7 @@
                   <div class="form-group">
                     <div class="input-animation js-input-animation">
                       <label class="input-animation__label js-input-animation-label" for="password">Password:</label>
-                      <input class="input input--bordered js-input-animation-field" id="password" type="password"/>
+                      <input class="input input--bordered js-input-animation-field" type="password" id="password"/>
                     </div>
                   </div>
                 </div>
