aoolication pages were refactored

--- a/app/static/application-page-1.html
+++ b/app/static/application-page-1.html
@@ -51,7 +51,7 @@
                     </div>
           </div>
           <div class="application-form__item">
-            <div class="application-form__heading">
+            <div class="application-form__card application-form__card--sm">
               <h4 class="text-surfie-green">What kind of services do you provide?</h4>
             </div>
           </div>
