selects were refactored. Select inner search was implemented

--- a/app/static/application-page-2.html
+++ b/app/static/application-page-2.html
@@ -16,19 +16,16 @@
           <div class="inner-header__wrap"><a class="inner-header__logo" href="#"><img src="images/logo.svg" alt="logo"/></a>
             <div class="inner-header__lang">
               <div class="select js-select select--bordered select--auto">
-                <div class="select__label js-select-label" data-selected="English">
-                  <div class="select__left"><img class="select__thumbnail" src="images/flags/gb.svg" alt="icon"/><span>English</span>
+                <div class="select__label js-select-label" data-selected="eng"><img src="images/flags/gb.svg"/><span>English</span></div>
+                <div class="select__wrap js-select-wrap">
+                  <div class="select__search">
+                    <input class="input input--bordered input--sm js-select-search" type="text" placeholder="Type something"/>
                   </div>
-                </div>
-                <div class="select__options  js-select-options">
-                  <div class="custom-scroll select__options-scroll" data-select-simplebar="data-select-simplebar">
-                    <div class="select__option  js-select-option" data-option="English">
-                      <div class="select__left"><img class="select__thumbnail" src="images/flags/gb.svg" alt="icon"/><span>English</span>
-                      </div>
-                    </div>
-                    <div class="select__option  js-select-option" data-option="Lithuanian">
-                      <div class="select__left"><img class="select__thumbnail" src="images/flags/lt.svg" alt="icon"/><span>Lithuanian</span>
-                      </div>
+                  <div class="select__options js-select-options">
+                    <div class="custom-scroll select__options-scroll" data-select-simplebar="data-select-simplebar">
+                      <div class="select__option js-select-option" data-option="eng"><img src="images/flags/gb.svg"/><span>English</span></div>
+                      <div class="select__option js-select-option" data-option="lt"><img src="images/flags/lt.svg"/><span>Lithuanian</span></div>
+                      <div class="select__option js-select-option" data-option="ge"><img src="images/flags/fr.svg"/><span>French</span></div>
                     </div>
                   </div>
                 </div>
@@ -174,7 +171,7 @@
               </div>
               <div class="application-form__card-line">
                         <div class="documents-list">
-                          <div class="custom-scroll documents-list__scroll" data-simplebar>
+                          <div class="custom-scroll custom-scroll--scroll-visible documents-list__scroll" data-simplebar>
                             <div class="documents-list__item">
                                       <div class="document-list-item">
                                         <div class="document-list-item__icon"><img src="images/icons/document-placeholder.svg" alt="placeholder"></div>
