--- a/app/static/login-page.html
+++ b/app/static/login-page.html
@@ -14,19 +14,16 @@
       <div class="container">
         <div class="login-page__lang">
           <div class="select js-select select--bordered select--auto">
-            <div class="select__label js-select-label" data-selected="English">
-              <div class="select__left"><img class="select__thumbnail" src="images/flags/gb.svg" alt="icon"/><span>English</span>
+            <div class="select__label js-select-label" data-selected="eng"><img src="images/flags/gb.svg"/><span>English</span></div>
+            <div class="select__wrap js-select-wrap">
+              <div class="select__search">
+                <input class="input input--bordered input--sm js-select-search" type="text" placeholder="Type something"/>
               </div>
-            </div>
-            <div class="select__options  js-select-options">
-              <div class="custom-scroll select__options-scroll" data-select-simplebar="data-select-simplebar">
-                <div class="select__option  js-select-option" data-option="English">
-                  <div class="select__left"><img class="select__thumbnail" src="images/flags/gb.svg" alt="icon"/><span>English</span>
-                  </div>
-                </div>
-                <div class="select__option  js-select-option" data-option="Lithuanian">
-                  <div class="select__left"><img class="select__thumbnail" src="images/flags/lt.svg" alt="icon"/><span>Lithuanian</span>
-                  </div>
+              <div class="select__options js-select-options">
+                <div class="custom-scroll select__options-scroll" data-select-simplebar="data-select-simplebar">
+                  <div class="select__option js-select-option" data-option="eng"><img src="images/flags/gb.svg"/><span>English</span></div>
+                  <div class="select__option js-select-option" data-option="lt"><img src="images/flags/lt.svg"/><span>Lithuanian</span></div>
+                  <div class="select__option js-select-option" data-option="ge"><img src="images/flags/fr.svg"/><span>French</span></div>
                 </div>
               </div>
             </div>
