--- a/app/static/application-page-2.html
+++ b/app/static/application-page-2.html
@@ -16,7 +16,8 @@
           <div class="inner-header__wrap"><a class="inner-header__logo" href="#"><img src="images/logo.svg" alt="logo"/></a>
             <div class="inner-header__lang">
               <div class="select js-select select--bordered select--auto">
-                <div class="select__label js-select-label" data-selected="eng"><img src="images/flags/gb.svg"/><span>English</span></div>
+                <button class="select__label js-select-label" data-selected="eng" type="button"><img src="images/flags/gb.svg"/><span>English</span>
+                </button>
                 <div class="select__wrap js-select-wrap">
                   <div class="select__search">
                     <input class="input input--bordered input--sm js-select-search" type="text" placeholder="Type something"/>
