--- a/app/static/login-page.html
+++ b/app/static/login-page.html
@@ -14,7 +14,8 @@
       <div class="container">
         <div class="login-page__lang">
           <div class="select js-select select--bordered select--auto">
-            <div class="select__label js-select-label" data-selected="eng"><img src="images/flags/gb.svg"/><span>English</span></div>
+            <button class="select__label js-select-label" data-selected="eng" type="button"><img src="images/flags/gb.svg"/><span>English</span>
+            </button>
             <div class="select__wrap js-select-wrap">
               <div class="select__search">
                 <input class="input input--bordered input--sm js-select-search" type="text" placeholder="Type something"/>
