drag-and-drop-box component was created

--- a/app/static/application-page-1.html
+++ b/app/static/application-page-1.html
@@ -953,11 +953,11 @@
           </div>
           <div class="application-form__item">
             <div class="button-group">
-                      <a class="button button--white button-group__button" href="application-page-1.html">Back
+                      <a class="button button--bg-white button-group__button" href="application-page-1.html">Back
                       </a>
                       <a class="button button-group__button" href="application-page-2.html">Next
                       </a>
-                      <button class="button button--transparent button-group__button">Discard
+                      <button class="button button--bg-transparent button-group__button">Discard
                       </button>
             </div>
           </div>
