--- a/app/static/application-page-1.html
+++ b/app/static/application-page-1.html
@@ -37,7 +37,7 @@
         </div>
       </div>
       <div class="application-page__form">
-        <form class="application-form">
+        <div class="application-form">
           <div class="application-form__title">
             <h2>Application form <span class="text-surfie-green">1/3</span></h2>
           </div>
@@ -961,7 +961,7 @@
                       </button>
             </div>
           </div>
-        </form>
+        </div>
       </div>
     </div>
     <script src="./scripts/vendor.js"></script>
