application-page-step-3 was added

--- a/app/static/application-page-2.html
+++ b/app/static/application-page-2.html
@@ -37,7 +37,7 @@
         </div>
       </div>
       <div class="application-page__form">
-        <div class="application-form">
+        <form class="application-form">
           <div class="application-form__title">
             <h2>Application form <span class="text-surfie-green">1/3</span></h2>
           </div>
@@ -175,7 +175,7 @@
                 </div>
               </div>
               <div class="application-form__card-line">
-                        <form class="drag-and-drop-box js-drag-and-drop-box" action="/">
+                        <div class="drag-and-drop-box js-drag-and-drop-box">
                           <div class="drag-and-drop-box__label dz-message"><span class="drag-and-drop-box__label-title">Drag and drop files</span>
                                     <button class="button button--squere button--bg-alabaster drag-and-drop-box__label-button" type="button">
                                       <svg class="svg-icon svg-icon--surfie-green" width="14" height="14">
@@ -197,7 +197,7 @@
                           <div class="drag-and-drop-box__preview">
                             <div class="custom-scroll custom-scroll--scroll-visible drag-and-drop-box__preview-scroll" data-simplebar></div>
                           </div>
-                        </form>
+                        </div>
               </div>
               <div class="application-form__card-line">
                         <button class="button button--bordered" type="button"><span>Add more</span><span class="button__icon">
@@ -333,7 +333,7 @@
                       </button>
             </div>
           </div>
-        </div>
+        </form>
       </div>
     </div>
     <script src="./scripts/vendor.js"></script>
